fix character preview layout spacing

--- a/src/css/_tabs.scss
+++ b/src/css/_tabs.scss
@@ -598,6 +598,7 @@
 
 	.char-preview {
 		grid-column: 2;
+		margin: 20px 0 0 20px
 
 		.texture-preview-panel{
 			grid-row: 2;
